
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2024 FEB 21a 
  * in model/fluid/doc/Transport_Equations/report.tex
    - added better explanations in the charged species momentum equation section
  * in model/share/transport_share.c
    - renamed _mueNk_from_Te() to _mueNk_from_Te_ParentMacheret()
  * in model/transport/*/transport.c
    - added _mueNk_from_Te() which calls _mueNk_from_Te_ParentMacheret()
  * in model/transport/doc/report.tex
    - added electron temperature data to Table 2


2024 FEB 20a
  * in model/fluid/doc/Transport_Equations/report.tex
    - in the section "Charged Species Momentum Equation", added a derivation of the drift-diffusion
      model from the fundamental momentum equation as well as a derivation of the effective
      mobility
  * in model/transport/doc/report.tex
    - improved the formulation of the effective mobility according to the one derived in 
      section "Charged Species Momentum Equation" of model/fluid/doc/Transport_Equations/report.tex 
    - added a derivation of the electron mobility within a ionic species


2024 FEB 16a
  * in model/share/transport_share.c
    - added _mueN_N2() and _mueNk_from_Te()
  * in model/chem/_C2H4_Air_23s/chem.hh
    - added missing species HCCO
  * in model/thermo/_generic/electronimpact.c
    - removed _mueN_N2() and _mueNk_from_Te()
  * 

2024 FEB 14a
  * in model/fluid/_Navier-Stokes_plasma/fluid_source.c
    - in find_Semfield(), removed _averaged_rate() for EDOTJ
    - in find_Se(), removed _averaged_rate() for EDOTJE
  * in src/data.c
    - in write_data_file_binary_ascii(), added "averagedrates_time=0.0E0 AVERAGEDRATES=0"
      to first line of data file when not UNSTEADY
  * in model/chem/_NH3_Plasma_10s/arakoni2007.c
    - added _averaged_rate_local()
    
