@@ -241,3 +241,13 @@ Calculations to 30 000 K",
 	author = {Hirschfelder, Joseph O. and Curtiss, Charles F. and Bird, Robert Byron},
 	year = {1964},
 }
+
+@article{jcp:2012:morgan,
+  title={The LXCat project: Electron scattering cross sections and swarm parameters for low temperature plasma modeling},
+  author={Pancheshnyi, Sergey and Biagi, S and Bordage, Marie-Claude and Hagelaar, GJM and Morgan, WL and Phelps, AV and Pitchford, Leanne C},
+  journal={Chemical Physics},
+  volume={398},
+  pages={148--153},
+  year={2012},
+  publisher={Elsevier}
+}
